--- a/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/post-installation.adoc
@@ -111,9 +111,9 @@ This step creates a container, and connects to the database pod, `pg_basebackup`
 [[backup-restore]]
 === Restoring to a Backup
 
-You can restore to a database backup created in xref:creating-backups[] using the restore template (`cfme-restore-job.yaml`).
+You can restore to a database backup created in xref:creating-backups[] using the restore template, `cfme-restore-job.yaml`.
 
-The restore job will look for `cfme-backup` and `cfme-postgresql` PVs by default, and the latest successful backup will be restored by default. If existing data is found on prod PG volume, it will be renamed and left on the volume.
+The restore job will look for `cfme-backup` and `cfme-postgresql` PVs by default, and the latest successful backup will be restored by default. If existing data is found on the `cfme-postgresql` volume, it will be renamed and left on the volume.
 
 [IMPORTANT]
 ====
