corrected template location and parameter

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -26,20 +26,25 @@ To successfully deploy a {product-title} appliance on OpenShift Container Platfo
 OpenShift Container Platform 3.5 is required for this installation. Red Hat has not tested this procedure with earlier versions of OpenShift Container Platform.
 ====
 
-The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
+// Edit for upstream.
 
-These files create the OpenShift pods comprising the appliance, and are available from the Red Hat Container Catalog.
+The {product-title_short} deployment uses `.yaml` template files to create the appliance, including `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
 
-To download the files to your system, navigate to each of the following pages and click the *Get this image* tab. Select *OpenShift* from the *Choose your platform:* list, then follow the instructions on that page to pull the image:
+ifdef::cfme[]
+These templates are available in RPMs from Red Hat-provided image streams. To obtain the templates:
 
-* https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-app[{product-title_short} appliance image]
-* https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-memcached[Memcached image]
-* https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-postgresql[PostgreSQL image]
+. Configure image streams as described in link:https://access.redhat.com/documentation/en-us/openshift_container_platform/3.7/html/installation_and_configuration/install-config-imagestreams-templates#is-templates-prereqs[OpenShift Container Platform _Installation and Configuration_].
+. After loading the image streams and templates, the templates will be available on your OpenShift system in `/usr/share/openshift/examples/cfme-templates`.
 
+The {product-title_short} template points to several image files to create the OpenShift pods that comprise the appliance. These image files are obtained from the https://access.redhat.com/containers/?product=Red%20Hat%20CloudForms%20#/search/cloudforms[Red Hat Container Catalog] during deployment.
+endif::cfme[]
 
-/////
-OpenShift Container Platform 3.5 includes these files by default.
-/////
+ifdef::miq[]
+These templates are available in GitHub. You can obtain the templates from the link:https://github.com/ManageIQ/manageiq-pods/tree/master/templates[GitHub repository], or with the following steps:
+
+. Configure image streams as described in link:https://docs.openshift.com/container-platform/3.5/install_config/imagestreams_templates.html#is-templates-prereqs[OpenShift Container Platform _Installation and Configuration_].
+. After loading the image streams and templates, the templates will be available on your OpenShift system in `/usr/share/ansible/openshift-ansible/roles/openshift_examples/files/examples/v3.5/cfme-templates`.
+endif::miq[]
 
 ==== Cluster Sizing
 
@@ -204,7 +209,7 @@ $ oc new-app --template=cloudforms
 Alternatively, to deploy {product-title} from a template using customized settings, add the `-p` option and the desired parameters to the command. For example: 
 +
 ------
-$ oc new-app --template=cloudforms -p DATABASE_VOLUME_CAPACITY=2Gi,MEMORY_POSTGRESQL_LIMIT=4Gi,APPLICATION_DOMAIN=hostname
+$ oc new-app --template=cloudforms -p DATABASE_VOLUME_CAPACITY=2Gi,POSTGRESQL_MEM_LIMIT=4Gi,APPLICATION_DOMAIN=hostname
 ------
 +
 [IMPORTANT]
