--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -9,18 +9,17 @@ This chapter outlines the steps for installing and configuring the {product-titl
 The primary database-only appliance functions as an external database to the {product-title_short} appliances.
 
 . Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
-. Configure time synchronization on the appliance:
-.. Edit `/etc/chronyd.conf` with valid NTP server information.
-.. Re-synchronize time information across the appliances:
+. Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
+. SSH into the {product-title_short} appliance to enter the appliance console. 
+. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. Re-synchronize time information across the appliances:
 +
 ------
 # systemctl enable chronyd.service
 # systemctl start chronyd.service
 ------
 +
-. SSH into the {product-title_short} appliance to enter the appliance console.
-. Configure the hostname by selecting *Set Hostname*.
-. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. In the appliance console, configure the hostname by selecting *Set Hostname*.
 . Select *Configure Database*.
 . Select *Create key* to create the encryption key. You can create a new key, or use an existing key on your system by selecting *Fetch key from remote machine* and following the prompts.
 . Select *Create Internal Database*.
@@ -57,18 +56,17 @@ This must be configured from the {product-title_short} appliance before the prim
 ====
 
 . Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
-. Configure time synchronization on the appliance:
-.. Edit `/etc/chronyd.conf` with valid NTP server information.
-.. Re-synchronize time information across the appliances:
+. Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
+. SSH into the {product-title_short} appliance to enter the appliance console. 
+. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. Re-synchronize time information across the appliances:
 +
 ------
 # systemctl enable chronyd.service
 # systemctl start chronyd.service
 ------
 +
-. SSH into the {product-title_short} appliance to enter the appliance console.
-. Configure the hostname by selecting *Set Hostname*.
-. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. In the appliance console, configure the hostname by selecting *Set Hostname*.
 . Select *Configure Database*.
 . Configure this appliance to use the encryption key from the primary database-only appliance:
 .. For *Encryption Key*, select *Fetch key from remote machine*.
@@ -126,18 +124,17 @@ The hostname must be visible to all appliances that communicate with this databa
 The standby database-only appliance is a copy of the primary database-only appliance and takes over the role of primary database in case of failure.
 
 . Deploy a {product-title_short} appliance with an extra partition for the database that is the same size as the primary database-only appliance, as it will contain the same data. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
-. Configure time synchronization on the appliance:
-.. Edit `/etc/chronyd.conf` with valid NTP server information.
-.. Re-synchronize time information across the appliances:
+. Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
+. SSH into the {product-title_short} appliance to enter the appliance console. 
+. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. Re-synchronize time information across the appliances:
 +
 ------
 # systemctl enable chronyd.service
 # systemctl start chronyd.service
 ------
 +
-. SSH into the {product-title_short} appliance to enter the appliance console.
-. Configure the hostname by selecting *Set Hostname*.
-. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. In the appliance console, configure the hostname by selecting *Set Hostname*.
 
 
 [[configuring_standby_db]]
@@ -177,18 +174,17 @@ Verify the configuration on the appliance console details screen for the standby
 Install a second virtual machine with a {product-title_short} appliance and any additional appliances in the region using the following steps:
 
 . Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
-. Configure time synchronization on the appliance:
-.. Edit `/etc/chronyd.conf` with valid NTP server information.
-.. Re-synchronize time information across the appliances:
+. Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
+. SSH into the {product-title_short} appliance to enter the appliance console. 
+. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. Re-synchronize time information across the appliances:
 +
 ------
 # systemctl enable chronyd.service
 # systemctl start chronyd.service
 ------
 +
-. SSH into the {product-title_short} appliance to enter the appliance console.
-. Configure the hostname by selecting *Set Hostname*.
-. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
+. In the appliance console, configure the hostname by selecting *Set Hostname*.
 . Select *Configure Database*.
 . Configure this appliance to use the encryption key from the primary database-only appliance:
 .. For *Encryption Key*, select *Fetch key from remote machine*.
