fixed step for region and database, added port step found in testing

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -117,8 +117,9 @@ endif::ssh[]
 All {product-title_short} appliances in a multi-region deployment must use the same key.
 ====
 +
-. Choose *2) Create Region in External Database* for the database location.
+. Choose *3) Join Region in External Database* for the database location.
 . Enter the database hostname or IP address when prompted.
+. Enter the port number or leave blank for the default (`5432`).
 . Enter the database name or leave blank for the default (`vmdb_production`).
 . Enter the database username or leave blank for the default (`root`).
 . Enter the chosen database user's password.
