resolved merge conflict

--- a/doc-Managing_Providers/topics/Viewing_an_Object_Summary.adoc
+++ b/doc-Managing_Providers/topics/Viewing_an_Object_Summary.adoc
@@ -1,6 +1,6 @@
 === Viewing an Object Summary
 
-Object summaries are found at menu:Compute[Containers > <Object>], and you can view information about a number of objects and their components.
+Object summaries are found at menu:Compute[Containers > _Object_], and you can view information about a number of objects and their components.
 
 [[viewing-a-containers-provider-summary]]
 Viewing a Containers Provider Summary::
