--- a/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
@@ -53,6 +53,26 @@ SmartState analysis scanning may be initiated manually for images. From an image
 
 If the image scan policy has been updated since the last scan, compliance conditions may be re-evaluated. From an image summary page, select menu:Policy[Check Compliance of Last Known Configuration]. Refreshing the image page will reflect the latest compliance history.
 
+=== Generating a Report on Images
+
+You can output the results of an OpenSCAP scan of images to a report, so that you can flag the high-security risk images to be scanned (and not scan the safe ones).
+
+To create a report:
+// From _to_generate_a_single_report in monitoring, Alerts and reporting, but modified.
+
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the menu:Reports[All Reports] accordion. Navigate to menu:Configuration Management[Containers > Images by Failed OpenSCAP Rule Results] for a report showing which images have failed the OpenSCAP compliance.
+. Click  image:1847.png[] (*Queue*).
+. The report generation is placed on the queue and its status shows in the reports page.
++
+
+image:2274.png[]
+
+. Click  image:2106.png[] *(Reload current display)* to update the status. NEEDS NEW ICON FOR RELOAD.
+. Navigate to the *Saved Reports* accordion, and click the report when it is completed.
+. Click ??Download as CSV (or text?), sort the reports by Severity
+.
+
 == OpenSCAP Policy Profile
 
 {product-title} is pre-configured with a default scanning policy profile. This includes conditions to scan and identify compliance, as well as annotate compliance failure. SmartState analysis is performed when new images are added to OpenShift.
