added VMware appliance image options section with some info

--- a/doc-Installing_on_VMware_vSphere/topics/installation.adoc
+++ b/doc-Installing_on_VMware_vSphere/topics/installation.adoc
@@ -9,6 +9,18 @@ Installing {product-title} consists of the following steps:
 
 After you have completed all the procedures in this guide, you will have a working environment on which additional customizations and configurations can be performed.
 
+[[choosing-the-appliance]]
+=== Choosing the appliance
+
+There are two types of {product-title_short} appliances available to install on the VMware vSphere platform, depending on your performance needs:
+
+* `cfme-vsphere-.w.x.y.z.x86_64.vsphere.ova` - This image contains the LSI Logic Parallel/SAS bus driver.
+* `cfme-vsphere-paravirtual.w.x.y.z.x86_64.vsphere.ova` - This image contains the paravirtualization (PVSCSI) bus driver.
+
+PVSCSI and LSI Logic Parallel/SAS are essentially the same when it comes to overall performance capability. However, the PVSCSI controller is more efficient in the number of host compute cycles required to process the same number of IOPS. 
+
+If you have a very storage I/O intensive virtual machine, use the PVSCSI controller to save as many CPU cycles as possible, which can then be used by the application or host. Most modern operating systems that can drive high I/O support one of these two controllers.
+
 ifdef::miq[]
 [[obtaining-the-appliance]]
 === Obtaining the appliance
