--- a/doc-Installing_on_VMware_vSphere/topics/installation.adoc
+++ b/doc-Installing_on_VMware_vSphere/topics/installation.adoc
@@ -14,8 +14,8 @@ After you have completed all the procedures in this guide, you will have a worki
 
 There are two types of {product-title_short} appliances available to install on the VMware vSphere platform, depending on your performance needs:
 
-* `cfme-vsphere-.w.x.y.z.x86_64.vsphere.ova` - This image contains the LSI Logic Parallel/SAS bus driver.
-* `cfme-vsphere-paravirtual.w.x.y.z.x86_64.vsphere.ova` - This image contains the paravirtualization (PVSCSI) bus driver.
+* `cfme-vsphere-.w.x.y.z.x86_64.vsphere.ova` - This image uses the LSI Logic Parallel/SAS driver on vSphere.
+* `cfme-vsphere-paravirtual.w.x.y.z.x86_64.vsphere.ova` - This image uses the paravirtualization (PVSCSI) driver on vSphere.
 
 PVSCSI and LSI Logic Parallel/SAS are essentially the same when it comes to overall performance capability. However, the PVSCSI controller is more efficient in the number of host compute cycles required to process the same number of IOPS. 
 
