replaced old icons and screenshot with 4.6 ones, edited section on reports for images

--- a/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
@@ -55,23 +55,25 @@ If the image scan policy has been updated since the last scan, compliance condit
 
 === Generating a Report on Images
 
-You can output the results of an OpenSCAP scan of images to a report, so that you can flag the high-security risk images to be scanned (and not scan the safe ones).
+You can output the results of an OpenSCAP scan of images to a report, so that you can flag only the high-security risk images for future scans, consequently saving CPU by not scanning all images.
 
 To create a report:
 // From _to_generate_a_single_report in monitoring, Alerts and reporting, but modified.
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the menu:Reports[All Reports] accordion. Navigate to menu:Configuration Management[Containers > Images by Failed OpenSCAP Rule Results] for a report showing which images have failed the OpenSCAP compliance.
-. Click  image:1847.png[] (*Queue*).
-. The report generation is placed on the queue and its status shows in the reports page.
+. Click image:play_arrow.png[] *Queue*.
+. The report generation is placed in the queue and its status shows in the reports page.
 +
 
-image:2274.png[]
+image:failedimagescan.png[]
 
-. Click  image:2106.png[] *(Reload current display)* to update the status. NEEDS NEW ICON FOR RELOAD.
+. Click  image:reload.png[] *(Reload current display)* to update the status.
 . Navigate to the *Saved Reports* accordion, and click the report when it is completed.
-. Click ??Download as CSV (or text?), sort the reports by Severity
-.
+. Click *Download as CSV* (or text?), and sort the images in the report by *Severity*.
+
+NEEDINFO:
+* Create a scan of only high-security or failed images.
 
 == OpenSCAP Policy Profile
 
