--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -1,31 +1,19 @@
 [[_vnc_and_spice_consoles]]
-= VNC and SPICE Consoles
+= Remote Consoles
 
-[IMPORTANT]
-====
-You must disable your browser's pop-up blocking feature for the console to launch.
-====
-
-A console is a graphical window that allows you to view the start up screen, shut down screen, and desktop of a virtual machine, and to interact with that virtual machine in a similar way to a physical machine.
-
-Before opening a console for a virtual machine, you must first configure console access at a network layer, and then configure the browser plug-in and certificate for the virtual machine console. Ensure that the Websocket flag is set to *On* for the VM console connection to work properly. For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#server-control-settings[Server Control Settings] in the CloudForms _General Configuration_ guide.
+A console is a graphical window that allows you to view the start up screen, shut down screen, and desktop of a virtual machine, and to interact with that virtual machine in a similar way to a physical machine. 
 
 {product-title} offers the following support for HTML5-based VNC and SPICE consoles:
 
-* VNC and SPICE consoles for Red Hat Enterprise Virtualization Manager with websocket proxy
-* VNC consoles for VMware with websocket proxy
+* VNC and SPICE consoles for Red Hat Virtualization Manager with websocket proxy
+* VMware's new WebMKS HTML console type
 * VNC consoles for OpenStack using OpenStack-supplied websocket proxy
 
-All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
+[NOTE]
+====
+VMware no longer supports the MKS console type. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}. However, the VMRC native desktop application is supported; see <<Configuring the VMRC Desktop Application for a Virtual Machine Console>>.
+====
 
-OpenStack:: {product-title} only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the Red Hat OpenStack Platform _Instances and Images Guide_ for more details.
-
-Red Hat Enterprise Virtualization Manager and VMware:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
-Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
-+
-When configuring Red Hat Virtualization Manager for virtual machine console access, set the display type for each virtual machine to `noVNC` or `SPICE HTML5`. 
-ifdef::cfme[Support for the SPICE HTML5 console client is offered as a technology preview.]
-For more information on configuring console options, see https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/single/virtual-machine-management-guide#sect-Configuring_Console_Options[Configuring Console Options] in the Red Hat Virtualization _Virtual Machine Management Guide_.
 
 [[configuring-console-access-to-vmware-esxi-hosts-at-a-network-layer]]
 == Configuring Console Access to VMware ESXi Hosts At A Network Layer
@@ -88,26 +76,19 @@ Follow these steps to configure the VMware ESXi host firewall ports for HTML5 or
 . Click *OK*.
 
 
-[[configuring-the-browser-plug-in-for-a-virtual-machine-console]]
-== Configuring the Browser Plug-in for a Virtual Machine Console
+[[configuring-the-webmks-support]]
+== Configuring the WebMKS Support in {product-title_short}
 
-This section only applies to using the VMware MKS or VMware VMRC browser plug-ins for accessing a virtual machine console. It does not apply to access through the HTML5 console.
+[NOTE]
+====
+This section only applies to using the VMRC native desktop application for accessing a virtual machine console. It does not apply to access through the HTML5-based console.
+====
 
-To use a browser plug-in for accessing a virtual machine console, you must have installed VNC on the machine on which you access the {product-title} Console and installed either the VMware MKS plug-in or the VMware VMRC plug-in in your browser.
+Complete the following steps to enable the WebMKS support in {product-title_short}.
 
-. From the settings menu, select *Configuration*.
-. Click on the *Settings* accordion, then click *Zones*.
-. Click the zone where the {product-title} server is located.
-. Click on the server.
-. Click the *Advanced* tab.
-. Under the *server* configuration parameter, add the following line:
-+
-----
-remote_console_type: console
-----
-+
-Replace `console` with the browser plug-in that you have set up. Valid values are `mks` and `vmrc`.
-. Click *Save*.
+. Log in to the {product-title_short} appliance console as a root user.
+. Extract the link:https://www.vmware.com/support/developer/html-console/[VMware WebMKS SDK] into the `public/webmks` folder in the appliance's root directory. Note that the `public` folder already exists, therefore create the `webmks` folder manually.
+
 
 [[opening-a-console-for-a-virtual-machine]]
 == Opening a Console for a Virtual Machine
@@ -119,10 +100,5 @@ Open a web-based VNC or SPICE console for a virtual machine.
 . Click image:screen.png[] (*Access*) and select *VM Console* or *Web Console*.
 
 The virtual machine console opens in a new tab in your browser.
-
-
-
-
-
 
 
