added section on appliance types, edited Roles section a bit

--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -108,7 +108,7 @@ Additionally, the following must be configured to use {product-title}:
 [[terminology]]
 === Terminology
 
-The following terms are used throughout this document. Review them before proceeding.
+The following terms are used throughout the documentation. Review them before proceeding.
 
 Account Role:: The level of access a user has to different parts and functions of the {product-title} console. There are a variety of Account Roles, which can be assigned to users to restrict or allow access to parts of the console and virtual infrastructure.
 
@@ -195,8 +195,11 @@ Virtual Management Database (VMDB):: Database used by the {product-title} applia
 
 Virtual Thumbnail:: An image in the web interface representing a resource, such as a provider or a virtual machine, showing the resource's properties at a glance. Each virtual thumbnail is divided into quadrants, which provide information about the resource, such as its software and power state.
 
+Worker Appliance:: A {product-title_short} appliance dedicated to a role other than User Interface or database.
+
 Zones:: {product-title} Infrastructure can be organized into zones to configure failover and to isolate traffic. Zones can be created based on your environment.
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
+
 
 ifdef::cfme[]
 [[getting-support]]
