Minor peer review edit

--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -195,7 +195,7 @@ Virtual Management Database (VMDB):: Database used by the {product-title} applia
 
 Virtual Thumbnail:: An image in the web interface representing a resource, such as a provider or a virtual machine, showing the resource's properties at a glance. Each virtual thumbnail is divided into quadrants, which provide information about the resource, such as its software and power state.
 
-Worker Appliance:: A {product-title_short} appliance dedicated to a role other than User Interface or database.
+Worker Appliance:: A {product-title_short} appliance dedicated to a role other than user interface or database.
 
 Zones:: {product-title} Infrastructure can be organized into zones to configure failover and to isolate traffic. Zones can be created based on your environment.
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
