Additional steps to configure the WebMKS support in CloudForms. Other minor edits.
Conflicts:
	doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc

--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -3,15 +3,15 @@
 
 A console is a graphical window that allows you to view the start up screen, shut down screen, and desktop of a virtual machine, and to interact with that virtual machine in a similar way to a physical machine. 
 
-{product-title} offers the following support for HTML5-based VNC and SPICE consoles:
+{product-title} offers the following support for HTML5-based VNC, SPICE, and WebMKS consoles:
 
 * VNC and SPICE consoles for Red Hat Virtualization Manager with websocket proxy
-* VMware's new WebMKS HTML console type
+* VMware's WebMKS HTML5-based console type
 * VNC consoles for OpenStack using OpenStack-supplied websocket proxy
 
 [NOTE]
 ====
-VMware no longer supports the MKS console type. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}. However, the VMRC native desktop application is supported; see <<Configuring the VMRC Desktop Application for a Virtual Machine Console>>.
+VMware no longer supports the MKS console type. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}. However, the VMRC native desktop application is supported; see <<Configuring the WebMKS Support in {product-title_short}>>.
 ====
 
 
@@ -79,16 +79,17 @@ Follow these steps to configure the VMware ESXi host firewall ports for HTML5 or
 [[configuring-the-webmks-support]]
 == Configuring the WebMKS Support in {product-title_short}
 
-[NOTE]
-====
-This section only applies to using the VMRC native desktop application for accessing a virtual machine console. It does not apply to access through the HTML5-based console.
-====
+Complete the following steps to enable WebMKS support in {product-title_short}.
 
-Complete the following steps to enable the WebMKS support in {product-title_short}.
-
-. Log in to the {product-title_short} appliance console as a root user.
-. Extract the link:https://www.vmware.com/support/developer/html-console/[VMware WebMKS SDK] into the `public/webmks` folder in the appliance's root directory. Note that the `public` folder already exists, therefore create the `webmks` folder manually.
-
+. Log in to the {product-title_short} appliance console as the root user.
+. Extract the link:https://www.vmware.com/support/developer/html-console/[VMware WebMKS SDK] into the `public/webmks` folder in the appliance's root directory. Note that the `public` folder already exists, so create the `webmks` folder manually before extracting files in it.
+. Log in to the {product-title_short} user interface as an administrative user.
+. From the settings menu, select *Configuration*.
+. Click on the *Settings* accordion, then click *Zones*.
+. Click the zone where the {product-title_short} server is located.
+. Click on the server.
+. Under *VMware Console Support*, select *VMware WebMKS* from the *Use* list.
+. Click *Save*.
 
 [[opening-a-console-for-a-virtual-machine]]
 == Opening a Console for a Virtual Machine
