--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -5,15 +5,25 @@ A console is a graphical window that allows you to view the start up screen, shu
 
 {product-title} offers the following support for HTML5-based VNC, SPICE, and WebMKS consoles:
 
-* VNC and SPICE consoles for Red Hat Virtualization Manager with websocket proxy
-* VMware's WebMKS HTML5-based console type
-* VNC consoles for OpenStack using OpenStack-supplied websocket proxy
+* VNC and SPICE consoles for Red Hat Virtualization Manager with websocket proxy.
+* VMware's WebMKS HTML5-based console type. For more information, see <<Configuring the WebMKS Support in {product-title_short}>>.
+* VNC consoles for OpenStack using OpenStack-supplied websocket proxy.
 
 [NOTE]
 ====
-VMware no longer supports the MKS console type. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}. However, the VMRC native desktop application is supported; see <<Configuring the WebMKS Support in {product-title_short}>>.
+VMware no longer supports the MKS console type. Also, VMRC is no longer a browser plugin but a native desktop application. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}.
 ====
 
+All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
+
+OpenStack:: {product-title} only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the Red Hat OpenStack Platform _Instances and Images Guide_ for more details.
+
+Red Hat Enterprise Virtualization Manager and VMware:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
+Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
+
+When configuring Red Hat Virtualization Manager for virtual machine console access, set the display type for each virtual machine to `noVNC` or `SPICE HTML5`. 
+ifdef::cfme[Support for the SPICE HTML5 console client is offered as a technology preview.]
+For more information on configuring console options, see https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/single/virtual-machine-management-guide#sect-Configuring_Console_Options[Configuring Console Options] in the Red Hat Virtualization _Virtual Machine Management Guide_.
 
 [[configuring-console-access-to-vmware-esxi-hosts-at-a-network-layer]]
 == Configuring Console Access to VMware ESXi Hosts At A Network Layer
