--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -11,7 +11,9 @@ A console is a graphical window that allows you to view the start up screen, shu
 
 [NOTE]
 ====
-VMware no longer supports the MKS console type. Also, VMRC is no longer a browser plugin but a native desktop application. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}.
+* VMware no longer supports the MKS console type. Also, VMRC is no longer a browser plugin but a native desktop application. As a result, the VMware MKS and the VMRC plugin option have been disabled in {product-title_short}.
+
+* Currently, attempting to connect to the VMware WebMKS console for a virtual machine fails when the server security type is set to `2` for that virtual machine.
 ====
 
 All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
