--- a/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
+++ b/doc-Scripting_Actions/topics/Filtering-Actions-for-Custom-Buttons.adoc
@@ -1,6 +1,6 @@
 [[filtering-actions-custom-buttons]]
 
-=== Applying Visibility and Enablement Filtering Actions to Custom Buttons
+=== Setting Enablement and Visibility for Custom Buttons
 
 {product-title} adds methods for evaluating an expression to determine whether a custom button is visible and enabled. Each method has a target object, for example, a virtual machine or host, and expressions can set a custom button to visible, hidden, or disabled.
 
